        - Work around exception objects with broken string overloading in one
          additional codepath (missed in 0.08260)
        - Fix more inconsistencies of the quote_names attribute propagating
          to SQL::Translator (partially RT#87731)
        - Fix SQLT constraint naming when DBIC table names are fully qualified
          (PR#48)
        - Fix inability to handle multiple consecutive transactions with
          savepoints on DBD::SQLite < 1.39
        - Fix CDBICompat to match Class::DBI behavior handling non-result
          blessed has_a (implicit deflate via stringification and inflate via
          blind new) (GH#51)

    * Misc
        - A bunch of fixes for the botched condition parsing in the previous
          devrels (082700_01 ~ 082700_05) (RT#98161)
        - Ensure source metadata calls always take place on the result source
          instance registered with the caller
        - IFF DBIC_TRACE output defaults to STDERR we now silence the possible
          wide-char warnings if the trace happens to contain unicode
        - Remove ::ResultSource::resolve_condition - the underlying machinery
          is in flux, and the method has had a deprecation warning for 5 years

0.08270 2014-01-30 21:54 (PST)
    * Fixes
        - Fix 0.08260 regression in DBD::SQLite bound int handling. Inserted
          data was not affected, but any function <=> integer comparison would
          have failed (originally fixed way back in 0e773352)
        - Fix failure to load DateTime formatter when connecting to Firebird
          over ODBC

    * Misc
        - All drivers based on ::Storage::DBI::Firebird::Common now return the
          same sqlt_type value (affects ::DBI::Interbase, ::DBI::Firebird and
          ::DBI::ODBC::Firebird)

0.08260 2014-01-28 18:52 (UTC)
    * New Features
        - A new zero-to-DBIC style manual: DBIx::Class::Manual::QuickStart

    * Notable Changes and Deprecations