@@ -51,6 +51,8 @@ Revision history for DBIx::Class
           to SQL::Translator (partially RT#87731)
         - Fix SQLT constraint naming when DBIC table names are fully qualified
           (PR#48)
+        - Ensure ::Schema::Versioned connects only once by reusing the main
+          connection (GH#57)
         - Fix inability to handle multiple consecutive transactions with
           savepoints on DBD::SQLite < 1.39
         - Fix CDBICompat to match Class::DBI behavior handling non-result
